# peaclock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RUNME.sh  build.sh  env.sh  help.txt  install.sh
cfg/: binary  binary-party  binary-unicode  default  digital  digital-party  octobanana
config/: default
doc/: help.txt
src/: info.hh  main.cc
src/ob/: algorithm.hh  belle.hh  color.hh  fft.hh  num.hh  parg.hh  readline.cc  readline.hh  rect.hh  string.cc  string.hh  term.hh  text.hh  timer.hh  util.cc  util.hh
src/ob/belle/: config.hh  io.hh  signal.hh
src/peaclock/: microphone.hh  peaclock.cc  peaclock.hh  readline.cc  readline.hh  tui.cc  tui.hh
